tests/specs/ecosystem/xeaone/server/5_3_4.test
xeaone/server/5.3.4
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/http@0.219.1": "jsr:@std/http@0.219.1"
    },
    "jsr": {
      "@std/http@0.219.1": {
        "integrity": "444b9e212747a4a163f5d9f5e468d1159e3ff9915cbc60a5bac6043f4771649a"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<Options>'.
  handle(context: Context, options?: Options): void {}
  ~~~~~~
    at file://<tmpdir>/src/cache.ts:37:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<string>'.
  handle(context: Context, origin: string): void {}
  ~~~~~~
    at file://<tmpdir>/src/cors.ts:4:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<any>'.
  handle(context: Context): Response | void {
  ~~~~~~
    at file://<tmpdir>/src/defenders.ts:131:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<boolean>'.
  handle(context: Context, use: boolean): Promise<Response | void> {
  ~~~~~~
    at file://<tmpdir>/src/file.ts:21:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<any>'.
  setup(context: Context): void {}
  ~~~~~
    at file://<tmpdir>/src/forwarded.ts:7:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<any>'.
  handle(context: Context): void {}
  ~~~~~~
    at file://<tmpdir>/src/forwarded.ts:8:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<any>'.
  handle(context: Context): Response | void {
  ~~~~~~
    at file://<tmpdir>/src/normalize.ts:18:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<boolean>'.
  setup(context: Context): void {}
  ~~~~~
    at file://<tmpdir>/src/payload.ts:15:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<boolean>'.
  handle(context: Context): Promise<void> {
  ~~~~~~
    at file://<tmpdir>/src/payload.ts:16:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<Handle>'.
  handle(context: Context, route?: Handle): Promise<Response | void> | Response | void {
  ~~~~~~
    at file://<tmpdir>/src/router.ts:5:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<boolean>'.
  setup(context: Context): void {}
  ~~~~~
    at file://<tmpdir>/src/session.ts:129:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<boolean>'.
  handle(context: Context, use: boolean): Promise<Response | void> {
  ~~~~~~
    at file://<tmpdir>/src/session.ts:130:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<any>'.
  handle(context: Context): Response | undefined {
  ~~~~~~
    at file://<tmpdir>/src/socket.ts:13:3

Found 13 errors.

error: Type checking failed.
